syntax = "proto3";

package apps.secrets_history;
option go_package = "apps.secrets_history.v1;secrets_history";

import "google/protobuf/timestamp.proto";

service RotationHistoryService {
  rpc GetRotation(GetRequest) returns (RotationHistory);
  rpc ListRotations(ListRequest) returns (ListResponse);
}

message RotationHistory {
  string client_id = 1;         // UUID клиента (обязательно)
  int32 app_id = 2;             // Положительное целое
  string secret_type = 3;       // "access" или "refresh"
  string old_secret = 4;        // Длина до 512 символов
  string new_secret = 5;        // Длина до 512 символов
  optional string rotated_by = 6; // UUID инициатора (опционально)
  google.protobuf.Timestamp rotated_at = 7;
}

message GetRequest {
  string client_id = 1;
  int32 app_id = 2;
  string secret_type = 3;
  google.protobuf.Timestamp rotated_at = 4;
}

message ListRequest {
  message Filter {
    optional string client_id = 1;
    optional int32 app_id = 2;
    optional string secret_type = 3;
    optional string rotated_by = 4;
    optional google.protobuf.Timestamp rotated_after = 5;
    optional google.protobuf.Timestamp rotated_before = 6;
  }

  int32 page = 1;
  int32 count = 2;
  Filter filter = 3;
}

message ListResponse {
  repeated RotationHistory rotations = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 count = 4;
}