syntax = "proto3";
package sso.roles;
option go_package = "sso.roles.v1;roles";

import "google/protobuf/timestamp.proto";

service RoleService {
  rpc CreateRole (CreateRoleRequest) returns (Role);
  rpc GetRole (GetRoleRequest) returns (Role);
  rpc UpdateRole (UpdateRoleRequest) returns (Role);
  rpc DeleteRole (DeleteRoleRequest) returns (RoleDeleteResponse);
  rpc ListRoles (ListRolesRequest) returns (ListRolesResponse);
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 level = 4;
  bool is_custom = 5;
  string school_id = 6; // Привязка к школе
  string created_by = 7; // ID пользователя, создавшего роль
  string created_at = 8;
  string deleted_at = 9;
}

message CreateRoleRequest {
  string name = 1;
  string description = 2;
  optional int32 level = 3;
  optional string school_id = 4;
  string created_by = 5;
}

message GetRoleRequest {
  string id = 1;
}

message UpdateRoleRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional int32 level = 4;
}

message DeleteRoleRequest {
  string id = 1;
}

message ListRolesRequest {
  int32 page = 1;
  int32 page_size = 2;
  optional string school_id = 3; // Фильтр по школе
}

message ListRolesResponse {
  repeated Role roles = 1;
  int32 total_count = 2;
}

message RoleDeleteResponse {
  bool success = 1;
  google.protobuf.Timestamp deleted_at = 2;  // Время фактического удаления
}